trying to deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robotfriends",
-  "homepage": "https://uddhav99.github.io/RoboFriends",
+  "homepage": "https://uddhav99.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
